hphp/test/slow/reified_generics/error-function-call-2.php.expectf
Fatal error: Cannot call a reified function without the reified generics in %s on line 4
